--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title id="game-title">CONNECT FOUR</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <script src="js/app.js"></script>
+    <h1>CONNECT FOUR</h1>
+    <div id="board"></div>
+    <button id="btn" class="btn" onclick="restart()">RESET GAME</button>
+    <script src="js/app.js"></script>   
+    <!-- <button id="btn" class="restart" onclick="restart()">PLAY AGAIN</button>  -->
 </body>
 </html>
