--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>CONNECT FOUR</h1>
-    <div id="board"></div>
+    <table id="board"></table>
     <button id="btn" class="btn" onclick="restart()">RESET GAME</button>
     <script src="js/app.js"></script>   
     <!-- <button id="btn" class="restart" onclick="restart()">PLAY AGAIN</button>  -->
